eicb-p1/src/test/testcases/errors/p1_public/task_priv_4/missing_colon_ternary_err.syn.mavl
function int increment(int i){
    i = (true ? 1 0);
    return i;
}
